# ds_exercise3

./: CMakeLists.txt  Makefile.calc  bullshit.c  calc.h  calc.x  calc_client.c  calc_clnt.c  calc_server.c  calc_svc.c  calc_xdr.c  client  keys.c  keys.h  libkeys.dylib  server
